--- a/pms/views/account_payment_views.xml
+++ b/pms/views/account_payment_views.xml
@@ -4,7 +4,7 @@
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='communication']" position="after">
+            <xpath expr="//field[@name='date']" position="after">
                 <field name="folio_id" />
                 <field name="save_amount" invisible="1" />
                 <field name="save_journal_id" invisible="1" />
@@ -68,7 +68,7 @@
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button
+                        <!-- <button
                             class="oe_stat_button"
                             name="button_journal_entries"
                             string="Journal Items"
@@ -76,26 +76,26 @@
                             groups="account.group_account_user"
                             attrs="{'invisible':[('move_line_ids','=',[])]}"
                             icon="fa-bars"
-                        />
-                        <field name="move_line_ids" invisible="1" />
-                        <button
+                        /> -->
+                        <!-- <field name="move_line_ids" invisible="1" /> -->
+                        <!-- <button
                             class="oe_stat_button"
                             name="button_invoices"
                             string="Invoices"
                             type="object"
                             attrs="{'invisible':[('has_invoices','=',False)]}"
                             icon="fa-bars"
-                        />
-                        <button
+                        /> -->
+                        <!-- <button
                             class="oe_stat_button"
                             name="open_payment_matching_screen"
                             string="Payment Matching"
                             type="object"
                             attrs="{'invisible':[('move_reconciled','=',True)]}"
                             icon="fa-university"
-                        />
-                        <field name="has_invoices" invisible="1" />
-                        <field name="move_reconciled" invisible="1" />
+                        /> -->
+                        <!-- <field name="has_invoices" invisible="1" />
+                        <field name="move_reconciled" invisible="1" /> -->
                     </div>
                     <field name="id" invisible="1" />
                     <div
@@ -141,14 +141,14 @@
                                 />
                             </div>
                             <field name="journal_id" widget="selection" />
-                            <field
+                            <!-- <field
                                 name="destination_journal_id"
                                 widget="selection"
                                 attrs="{
                                        'required': [('payment_type', '=', 'transfer')],
                                        'invisible': [('payment_type', '!=', 'transfer')],
                                        'readonly': [('state', '!=', 'draft')]}"
-                            />
+                            /> -->
                             <field name="hide_payment_method" invisible="1" />
                             <field
                                 name="payment_method_id"
@@ -157,13 +157,15 @@
                                 attrs="{'invisible': [('hide_payment_method', '=', True)]}"
                             />
                             <field name="payment_method_code" invisible="1" />
+                            <field name="suitable_journal_ids" invisible="1" />
+                            <field name="available_payment_method_ids" invisible="1" />
                         </group>
                         <group>
-                            <field name="payment_date" />
-                            <field
+                            <!-- <field name="payment_date" /> -->
+                            <!-- <field
                                 name="communication"
                                 attrs="{'invisible': [('state', '!=', 'draft'), ('communication', '=', False)]}"
-                            />
+                            /> -->
                             <field name="folio_id" readonly="1" force_save="1" />
                         </group>
                     </group>
@@ -192,7 +194,7 @@
                 decoration-muted="state in ['reconciled', 'cancelled']"
                 edit="false"
             >
-                <field name="payment_date" />
+                <!-- <field name="payment_date" /> -->
                 <field name="name" />
                 <field name="journal_id" />
                 <field name="payment_method_id" />
