--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -3,7 +3,7 @@
     <record model="ir.actions.act_window" id="open_pms_reservation_form_tree_all">
         <field name="name">Reservation</field>
         <field name="res_model">pms.reservation</field>
-        <field name="view_mode">tree,form,graph,pivot</field>
+        <field name="view_mode">tree,form,calendar,graph,pivot</field>
     </record>
     <record model="ir.ui.view" id="pms_reservation_view_form">
         <field name="name">pms.reservation.form</field>
@@ -526,6 +526,22 @@
             </form>
         </field>
     </record>
+
+    <!-- Calendar -->
+    <record id="pms_reservation_view_calendar" model="ir.ui.view">
+        <field name="name">pms.reservation.view.calendar</field>
+        <field name="model">pms.reservation</field>
+        <field name="arch" type="xml">
+            <calendar date_start="checkin" date_stop="checkout"
+                      string="Reservations" quick_add="False"
+                      mode="month" scales="month,year">
+                <field name="partner_id" avatar_field="image_128"/>
+                <field name="room_type_id"/>
+                <field name="room_id"/>
+            </calendar>
+        </field>
+    </record>
+
     <!-- Form view Checkin Partners from reservation -->
     <record model="ir.ui.view" id="pms_reservation_checkin_view_form">
         <field name="name">pms.reservation.checkin.form</field>
